# nspells

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  spells
include/: Element.h  GameWindow.h  Rectangle.h  global.h
src/: Element.cpp  GameWindow.cpp  Rectangle.cpp  main.cpp
